--- a/Jogo.De.Xadrez.cs.csproj
+++ b/Jogo.De.Xadrez.cs.csproj
@@ -8,13 +8,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="NovaPasta1\" />
-    <Folder Include="NovaPasta2\" />
-    <Folder Include="NovaPasta3\" />
-    <Folder Include="NovaPasta4\" />
-    <Folder Include="NovaPasta5\" />
-    <Folder Include="NovaPasta6\" />
-    <Folder Include="NovaPasta\" />
+    <Compile Remove="NovaPasta1\**" />
+    <Compile Remove="NovaPasta2\**" />
+    <Compile Remove="NovaPasta3\**" />
+    <Compile Remove="NovaPasta4\**" />
+    <Compile Remove="NovaPasta5\**" />
+    <Compile Remove="NovaPasta6\**" />
+    <EmbeddedResource Remove="NovaPasta1\**" />
+    <EmbeddedResource Remove="NovaPasta2\**" />
+    <EmbeddedResource Remove="NovaPasta3\**" />
+    <EmbeddedResource Remove="NovaPasta4\**" />
+    <EmbeddedResource Remove="NovaPasta5\**" />
+    <EmbeddedResource Remove="NovaPasta6\**" />
+    <None Remove="NovaPasta1\**" />
+    <None Remove="NovaPasta2\**" />
+    <None Remove="NovaPasta3\**" />
+    <None Remove="NovaPasta4\**" />
+    <None Remove="NovaPasta5\**" />
+    <None Remove="NovaPasta6\**" />
   </ItemGroup>
 
 </Project>
